--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "astro": "^1.9.0",
     "parse-multipart-data": "^1.5.0",
     "solid-js": "^1.6.6",
-    "tailwindcss": "^3.2.4",
-    "undici": "^5.14.0"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.18"
